[package]
name = "jlctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
comfy-table = "7.1.0"
env_logger = "0.10.1"
log = "0.4.20"
nom = "7.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serialport = "4.2.2"
shadow-rs = "0.25.0"
time = "0.3.31"

[build-dependencies]
shadow-rs = "0.25.0"
