[package]
name = "jlctl"
version = "0.1.0-rc1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = { version = "0.6.5", optional = true }
actix-web = { version = "4.4.0", optional = true }
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
comfy-table = "7.1.0"
env_logger = "0.10.1"
log = "0.4.20"
nom = "7.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
#serialport = { git = "https://github.com/serialport/serialport-rs", features = ["serde"] }
serialport = { git = "https://github.com/nilclass/serialport-rs", branch = "try-windows-fix", features = ["serde"] }
shadow-rs = "0.25.0"
time = "0.3.31"
zip = { version = "0.6.6", optional = true }
mime_guess = "2.0.4"
rusb = { version = "0.9.3", features = ["serde", "vendored"] }

[build-dependencies]
shadow-rs = "0.25.0"
anyhow = "1.0.76"

[features]
default = ["server"]

# Enable web server
server = ["actix-cors", "actix-web"]

# Embed jumperlab, and serve it
jumperlab = ["server", "zip"]
